# aasist-uv

./: .gitignore  data_utils.py  evaluation.py  main.py  pyproject.toml  utils.py
config/: AASIST.conf
