[project]
name = "aasist-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy==1.19",
    "soundfile>=0.13.1",
    "tensorboard>=2.19.0",
    "torch>=1.6.0",
    "torchcontrib>=0.0.2",
    "tqdm>=4.67.1",
    "wandb>=0.19.11",
]
